--- a/00_Follow-along.html
+++ b/00_Follow-along.html
@@ -17,13 +17,26 @@
   </head>
   <body>
     <div id="map"></div>
-    <script>
+<script>
       var map;
       function initMap() {
         // Constructor creates a new map - only center and zoom are required.
         map = new google.maps.Map(document.getElementById('map'), {
           center: {lat: 40.7413549, lng: -73.9980244},
           zoom: 13
+        });
+        var tribeca = {lat: 40.719526, lng: -74.0089934};
+        var marker = new google.maps.Marker({
+          position: tribeca,
+          map: map,
+          title: 'First Marker!'
+        });
+        //adds infoWindow
+        var infowindow = new google.maps.InfoWindow ({
+          content: 'informatiiiooon windowwwwwwwww'
+        });
+        marker.addListener('click', function () {
+          infowindow.open(map, marker);
         });
       }
     </script>
