added LatLng to infowindow

--- a/00_Follow-along.html
+++ b/00_Follow-along.html
@@ -33,7 +33,8 @@
         });
         //adds infoWindow
         var infowindow = new google.maps.InfoWindow ({
-          content: 'informatiiiooon windowwwwwwwww'
+          //adds location in LatLng concatenated with text content
+          content: 'informatiiiooon windowwwwwwwww ' + marker.position.toString(),
         });
         marker.addListener('click', function () {
           infowindow.open(map, marker);
